deployment/dev/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: server-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /server(/|$)(.*)
        backend:
          serviceName: dev-server
          servicePort: 80
